--- a/src/main/resources/fxml/DashboardPage.fxml
+++ b/src/main/resources/fxml/DashboardPage.fxml
@@ -89,7 +89,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="statisticsBtn1" contentDisplay="TOP" layoutX="373.0" layoutY="267.0" mnemonicParsing="false" onAction="#HandleStatisticsBtn" prefHeight="88.0" prefWidth="114.0" style="-fx-background-color: #c9d1d0; -fx-background-radius: 7;" text="Analysis">
+            <Button fx:id="analysisBtn" contentDisplay="TOP" layoutX="373.0" layoutY="267.0" mnemonicParsing="false" onAction="#HandleAnalysisBtn" prefHeight="88.0" prefWidth="114.0" style="-fx-background-color: #c9d1d0; -fx-background-radius: 7;" text="Analysis">
                <graphic>
                   <ImageView fitHeight="35.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                      <image>
