--- a/src/main/resources/fxml/ForgotPasswordPage.fxml
+++ b/src/main/resources/fxml/ForgotPasswordPage.fxml
@@ -2,35 +2,39 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="700.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ForgotPasswordPageController">
     <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/style.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="page_container" stylesheets="@../styles/style.css">
-      <Hyperlink layoutX="31.0" layoutY="32.0" prefHeight="32.0" prefWidth="66.0" text="&gt; Back">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Hyperlink>
-        <Text layoutX="168.0" layoutY="56.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" styleClass="text_header" text="Forgot Password" textAlignment="CENTER" wrappingWidth="173.3962802886963">
-            <font>
-                <Font name="System Bold Italic" size="20.0" />
-            </font>
-        </Text>
-      <Text layoutX="136.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please enter your username" textAlignment="CENTER" wrappingWidth="238.455078125">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <TextField layoutX="56.0" layoutY="159.0" prefHeight="38.0" prefWidth="398.0" promptText="Username..." />
-      <Button layoutX="190.0" layoutY="224.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" styleClass="submit_button" text="Reset password" />
+    <AnchorPane layoutX="210.0" prefHeight="567.0" prefWidth="490.0">
+        <children>
+            <Label layoutX="165.0" layoutY="39.0" prefHeight="32.0" prefWidth="178.0" text="Forgot Password">
+                <font>
+                    <Font name="System Bold" size="22.0" />
+                </font>
+            </Label>
+            <TextField fx:id="email_field" layoutX="115.0" layoutY="116.0" prefHeight="28.0" prefWidth="259.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: #000; -fx-border-width: 0px 0px 1px 0px;" />
+         <Button fx:id="check_email_btn" layoutX="409.0" layoutY="116.0" mnemonicParsing="false" onAction="#HandleCheckEmailIsExits" prefHeight="26.0" prefWidth="63.0" style="-fx-background-color: BLACK;" text="Check" textFill="WHITE" />
+            <TextField fx:id="otp_field" layoutX="115.0" layoutY="190.0" prefHeight="28.0" prefWidth="259.0" promptText="OTP" style="-fx-background-color: transparent; -fx-border-color: #000; -fx-border-width: 0px 0px 1px 0px;" />
+         <Button fx:id="send_otp_btn" layoutX="115.0" layoutY="237.0" mnemonicParsing="false" onAction="#HandleSendOTP" prefHeight="26.0" prefWidth="63.0" style="-fx-background-color: BLACK;" text="Send" textFill="WHITE" />
+         <Button fx:id="verify_otp_btn" layoutX="294.0" layoutY="237.0" mnemonicParsing="false" onAction="#HandleVerifyOTP" prefHeight="26.0" prefWidth="80.0" style="-fx-background-color: BLACK;" text="Verify" textFill="WHITE" />
+         <Button fx:id="retrive_password_btn" layoutX="120.0" layoutY="336.0" mnemonicParsing="false" onAction="#HandleRetrivePassword" prefHeight="25.0" prefWidth="249.0" style="-fx-background-color: BLACK;" text="Retrive Password" textFill="WHITE" />
+         <TextField fx:id="new_password_field" layoutX="115.0" layoutY="395.0" prefHeight="28.0" prefWidth="259.0" promptText="New Password" style="-fx-background-color: transparent; -fx-border-color: #000; -fx-border-width: 0px 0px 1px 0px;" />
+            <Button fx:id="submit_btn" layoutX="122.0" layoutY="496.0" mnemonicParsing="false" onAction="#HandleSubmit" prefHeight="25.0" prefWidth="249.0" style="-fx-background-color: BLACK;" text="Submit" textFill="WHITE" />
+            <Label fx:id="error_msg" layoutX="50.0" layoutY="462.0" prefHeight="18.0" prefWidth="390.0" textFill="#c66510" />
+            <Label layoutX="11.0" layoutY="121.0" text="Email :" />
+            <Label layoutX="11.0" layoutY="195.0" text="OTP:" />
+            <Label layoutX="11.0" layoutY="400.0" text="New Password:" />
+         <Label fx:id="otp_msg" layoutX="35.0" layoutY="274.0" prefHeight="18.0" prefWidth="438.0" textFill="#c66510" />
+         <Label fx:id="hide_label" layoutX="25.0" layoutY="14.0" opacity="0.0" prefHeight="18.0" prefWidth="134.0" textFill="#c66510" />
+        </children>
     </AnchorPane>
 </AnchorPane>
