--- a/src/main/resources/fxml/LoginPage.fxml
+++ b/src/main/resources/fxml/LoginPage.fxml
@@ -2,57 +2,35 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.LoginPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="700.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.LoginPageController">
     <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/style.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <AnchorPane layoutX="242.0" layoutY="28.0" prefHeight="506.0" prefWidth="502.0" styleClass="page_container" stylesheets="@../styles/style.css">
-        <Text fx:id="text_header" layoutX="181.0" layoutY="49.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" styleClass="text_header" text="LOGIN PAGE" textAlignment="CENTER" wrappingWidth="138.99631690979004">
+   <AnchorPane layoutX="210.0" prefHeight="567.0" prefWidth="490.0">
+      <children>
+         <Label layoutX="194.0" layoutY="39.0" prefHeight="26.0" prefWidth="165.0" text="Login Page">
             <font>
-                <Font name="System Bold Italic" size="20.0" />
+               <Font name="System Bold" size="22.0" />
             </font>
-        </Text>
-      <Text layoutX="154.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in your account to use program" />
-        <Label layoutX="18.0" layoutY="116.0" prefHeight="30.0" prefWidth="389.0" text="Username:">
-         <graphic>
-             <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                 <Image url="@../images/username-label.png" />
-             </ImageView>
-         </graphic>
-        </Label>
-        <TextField fx:id="username_field" layoutX="20.0" layoutY="158.0" prefHeight="42.0" prefWidth="457.0" promptText="Username..." />
-        <Label layoutX="18.0" layoutY="208.0" prefHeight="30.0" prefWidth="389.0" text="Password:">
-         <graphic>
-             <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                 <Image url="@../images/key-label.png" />
-             </ImageView>
-         </graphic>
-        </Label>
-        <PasswordField fx:id="password_field" layoutX="20.0" layoutY="247.0" prefHeight="42.0" prefWidth="458.0" promptText="Password..." />
-        <Button fx:id="login_button" layoutX="207.0" layoutY="329.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="38.0" prefWidth="88.0" styleClass="submit_button" text="Login">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Button>
-        <Text fx:id="error_desc" fill="#ea1d1d" layoutX="232.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="login" wrappingWidth="34.55417823791504">
-         <font>
-             <Font size="14.0" />
-         </font>
-        </Text>
-        <Text layoutX="18.0" layoutY="315.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account?" />
-      <Hyperlink fx:id="sign_in_hyperlink" layoutX="148.0" layoutY="299.0" text="Sign up" />
-      <Hyperlink fx:id="forgot_password_hyperlink" layoutX="362.0" layoutY="300.0" text="Forgot password?" />
-    </AnchorPane>
+         </Label>
+         <FontAwesomeIconView glyphName="USER" layoutX="48.0" layoutY="180.0" size="30" wrappingWidth="22.4000244140625" />
+            <TextField fx:id="username_field" layoutX="103.0" layoutY="155.0" prefHeight="28.0" prefWidth="322.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+         <FontAwesomeIconView glyphName="KEY" layoutX="48.0" layoutY="241.0" size="30" wrappingWidth="22.4000244140625" />
+            <PasswordField fx:id="password_field" layoutX="103.0" layoutY="216.0" prefHeight="28.0" prefWidth="322.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+            <Button fx:id="forgot_password_btn" layoutX="319.0" layoutY="258.0" mnemonicParsing="false" onAction="#HandleForgotPasswordScene" style="-fx-background-color: transparent;" text="Forgot password?" textFill="#4875b8" />
+            <Button fx:id="login_btn" layoutX="124.0" layoutY="311.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="25.0" prefWidth="249.0" style="-fx-background-color: BLACK;" text="Login" textFill="WHITE" />
+            <Label layoutX="143.0" layoutY="488.0" text="You don't have account? " />
+            <Button fx:id="sign_up_btn" layoutX="277.0" layoutY="484.0" mnemonicParsing="false" onAction="#HandleSignUpScene" style="-fx-background-color: transparent;" text="Sign Up" textFill="#4875b8" />
+            <Label fx:id="error_msg" layoutX="50.0" layoutY="360.0" prefHeight="18.0" prefWidth="390.0" textFill="#c66510" />
+      </children>
+   </AnchorPane>
 </AnchorPane>
