--- a/src/main/resources/fxml/SignUpPage.fxml
+++ b/src/main/resources/fxml/SignUpPage.fxml
@@ -2,37 +2,41 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="700.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.SignUpPageController">
     <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/style.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="page_container" stylesheets="@../styles/style.css">
-        <Hyperlink layoutX="31.0" layoutY="32.0" prefHeight="32.0" prefWidth="66.0" text="&gt; Back">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Hyperlink>
-        <Text layoutX="168.0" layoutY="56.0" stroke="#e4d7d7" strokeType="OUTSIDE" strokeWidth="2.0" styleClass="text_header" text="Sign Up Page" textAlignment="CENTER" wrappingWidth="173.3962802886963">
-            <font>
-                <Font name="System Bold Italic" size="20.0" />
-            </font>
-        </Text>
-        <Text layoutX="136.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Let's create a new account" textAlignment="CENTER" wrappingWidth="238.455078125">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Text>
-        <TextField layoutX="56.0" layoutY="159.0" prefHeight="38.0" prefWidth="398.0" promptText="Username..." />
-      <TextField layoutX="56.0" layoutY="208.0" prefHeight="38.0" prefWidth="398.0" promptText="Password..." />
-        <TextField layoutX="56.0" layoutY="262.0" prefHeight="38.0" prefWidth="398.0" promptText="Confirm password..." />
-        <Button layoutX="193.0" layoutY="315.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" styleClass="submit_button" text="Reset password" />
+    <AnchorPane layoutX="210.0" prefHeight="567.0" prefWidth="490.0">
+        <children>
+            <Label layoutX="204.0" layoutY="40.0" prefHeight="26.0" prefWidth="165.0" text="Sign Up">
+                <font>
+                    <Font name="System Bold" size="22.0" />
+                </font>
+            </Label>
+         <TextField fx:id="name_field" layoutX="103.0" layoutY="116.0" prefHeight="28.0" prefWidth="322.0" promptText="Name" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+            <TextField fx:id="username_field" layoutX="103.0" layoutY="170.0" prefHeight="28.0" prefWidth="322.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+            <PasswordField fx:id="password_field" layoutX="103.0" layoutY="224.0" prefHeight="28.0" prefWidth="322.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+         <TextField fx:id="email_field" layoutX="103.0" layoutY="278.0" prefHeight="28.0" prefWidth="322.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+         <TextField fx:id="phoneNumber_field" layoutX="103.0" layoutY="332.0" prefHeight="28.0" prefWidth="322.0" promptText="PhoneNumber" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-border-width: 0px 0px 2px 0px;" />
+         <DatePicker fx:id="birthday_field" layoutX="103.0" layoutY="395.0" prefHeight="26.0" prefWidth="322.0" promptText="Birthday" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);" />
+            <Button fx:id="create_account_btn" layoutX="120.0" layoutY="493.0" mnemonicParsing="false" onAction="#CreateAccount" prefHeight="25.0" prefWidth="249.0" style="-fx-background-color: BLACK;" text="Create Account" textFill="WHITE" />
+            <Label fx:id="error_msg" layoutX="50.0" layoutY="462.0" prefHeight="18.0" prefWidth="390.0" textFill="#c66510" />
+         <Label layoutX="11.0" layoutY="121.0" text="Name :" />
+         <Label layoutX="11.0" layoutY="175.0" text="Username :" />
+         <Label layoutX="13.0" layoutY="229.0" text="Password :" />
+         <Label layoutX="12.0" layoutY="283.0" text="Email :" />
+         <Label layoutX="11.0" layoutY="337.0" text="PhoneNumber :" />
+         <Label layoutX="11.0" layoutY="400.0" text="Birthday :" />
+        </children>
     </AnchorPane>
 </AnchorPane>
