--- a/src/main/resources/fxml/StatisticsPage.fxml
+++ b/src/main/resources/fxml/StatisticsPage.fxml
@@ -21,7 +21,7 @@
          <children>
             <TabPane fx:id="tabPane" layoutX="27.0" layoutY="29.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="362.0" prefWidth="758.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab fx:id="BookListPane" text="Book List">
+                <Tab fx:id="bookListPane" text="Book List">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -63,7 +63,7 @@
                                     <Image url="@../images/right-click-image.png" />
                                  </image>
                               </ImageView>
-                              <CheckBox fx:id="bookListCheckAll" layoutX="39.0" layoutY="302.0" mnemonicParsing="false" text="Select All" />
+                              <CheckBox fx:id="bookListCheckAll" layoutX="39.0" layoutY="302.0" mnemonicParsing="false" onAction="#HandleSelectAllBook" text="Select All" />
                                <Button fx:id="bookListDeleteSelectedItem" layoutX="127.0" layoutY="298.0" onAction="#HandleDeleteSelectedBook" style="-fx-background-color: transparent;" text="Delete" textFill="#2b579a">
                                    <graphic>
                                        <FontAwesomeIconView fill="#e9594d" glyphName="TRASH" size="15" />
@@ -76,7 +76,7 @@
                         </AnchorPane>
                   </content>
                 </Tab>
-                <Tab fx:id="StudentListPane" text="Student List">
+                <Tab fx:id="studentListPane" onSelectionChanged="#HandleSelectAllStudent" text="Student List">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -87,7 +87,7 @@
                                           <Insets left="125.0" top="2.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <ChoiceBox fx:id="studentListCheckBox" prefHeight="26.0" prefWidth="92.0">
+                                    <ChoiceBox fx:id="studentListChoiceBox" prefHeight="26.0" prefWidth="92.0">
                                        <HBox.margin>
                                           <Insets left="15.0" top="2.0" />
                                        </HBox.margin>
@@ -125,7 +125,7 @@
                            </children></AnchorPane>
                   </content>
                 </Tab>
-                  <Tab fx:id="issueBookListPane" text="Issue Book List">
+                  <Tab fx:id="issueBookListPane" onSelectionChanged="#HandleSelectAllIssueBook" text="Issue Book List">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -175,7 +175,7 @@
                         </AnchorPane>
                      </content>
                   </Tab>
-                  <Tab fx:id="returnBookListPane" text="Return Book List">
+                  <Tab fx:id="returnBookListPane" onSelectionChanged="#HandleSelectAllReturnBook" text="Return Book List">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -200,7 +200,7 @@
                               </HBox>
                               <TableView fx:id="returnBookListTableView" layoutY="44.0" prefHeight="245.0" prefWidth="758.0">
                                  <columns>
-                                    <TableColumn prefWidth="35.0" />
+                                    <TableColumn fx:id="returnBookListCheckCol" prefWidth="35.0" />
                                     <TableColumn fx:id="returnBookListIssueIDCol" prefWidth="64.0" text="IssueID" />
                                     <TableColumn fx:id="returnBookListBookIDCol" text="BookID" />
                                     <TableColumn fx:id="returnBookListBookISBNCol" prefWidth="100.0" text="BookISBN" />
@@ -209,7 +209,7 @@
                                     <TableColumn fx:id="returnBookListStudentNameCol" minWidth="5.5999755859375" prefWidth="130.0" text="StudentName" />
                                     <TableColumn fx:id="returnBookListIssueDateCol" minWidth="0.0" text="IssueDate" />
                                     <TableColumn fx:id="returnBookListReturnDateCol" minWidth="0.0" text="ReturnDate" />
-                                    <TableColumn minWidth="0.0" prefWidth="55.0" text="Days" />
+                                    <TableColumn fx:id="returnBookListDaysCol" minWidth="0.0" prefWidth="55.0" text="Days" />
                                  </columns>
                               </TableView>
                               <ImageView fitHeight="30.0" fitWidth="30.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
