--- a/src/main/resources/fxml/ScanISBNPage.fxml
+++ b/src/main/resources/fxml/ScanISBNPage.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.ScanISBNPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="450.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ScanISBNPageController">
+   <children>
+      <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="320.0" layoutX="90.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
