--- a/src/main/resources/fxml/AddBookPage.fxml
+++ b/src/main/resources/fxml/AddBookPage.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -20,7 +22,27 @@
                      </font>
                   </Label>
                   <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="365.0" layoutY="62.0" size="3em" text="" />
-                  <HBox layoutX="503.0" layoutY="6.0" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: WHITE;" />
+                  <HBox layoutX="503.0" layoutY="6.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                           <graphic>
+                              <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/minimize_window.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                           <graphic>
+                              <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/close_window.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children></HBox>
                </children>
             </AnchorPane>
             <TextField fx:id="bookIDField" layoutX="280.0" layoutY="104.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book ID" />
@@ -72,10 +94,6 @@
             <Button fx:id="addBookBtn" layoutX="266.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleAddBookBtn" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="ADD BOOK" textFill="WHITE" />
             <Button fx:id="addBookWithApiBtn" layoutX="441.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleAddBookWithApiBtn" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="ADD BOOK WITH API" textFill="WHITE" />
             <Label fx:id="msgLabel" layoutX="110.0" layoutY="498.0" prefHeight="18.0" prefWidth="381.0" textFill="#b96909" />
-            <Button fx:id="backBtn" layoutX="32.0" layoutY="535.0" mnemonicParsing="false" onAction="#HandleBackToDashboard" prefHeight="38.0" prefWidth="58.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <FontAwesomeIconView fill="#030303" glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" text="" />
-               </graphic></Button>
             <Label layoutX="110.0" layoutY="377.0" text="Image Path: ">
                <font>
                   <Font size="13.0" />
