--- a/src/main/resources/fxml/AddBookWithApiPage.fxml
+++ b/src/main/resources/fxml/AddBookWithApiPage.fxml
@@ -5,11 +5,34 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
 <AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.AddBookWithApiPageController">
    <children>
+       <HBox layoutX="503.0" layoutY="-3.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+           <children>
+               <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/minimize_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+               <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/close_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+           </children></HBox>
       <HBox layoutY="35.0" prefHeight="59.0" prefWidth="600.0">
          <children>
             <TextField fx:id="searchBookTitleField" prefHeight="26.0" prefWidth="330.0" />
