--- a/src/main/resources/fxml/AddStudentPage.fxml
+++ b/src/main/resources/fxml/AddStudentPage.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.AddStudentPageController">
@@ -14,6 +17,27 @@
          <children>
             <AnchorPane layoutY="-7.0" prefHeight="84.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);">
                <children>
+                   <HBox layoutX="503.0" layoutY="6.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+                       <children>
+                           <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                               <graphic>
+                                   <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                           <Image url="@../images/minimize_window.png" />
+                                       </image>
+                                   </ImageView>
+                               </graphic>
+                           </Button>
+                           <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                               <graphic>
+                                   <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                           <Image url="@../images/close_window.png" />
+                                       </image>
+                                   </ImageView>
+                               </graphic>
+                           </Button>
+                       </children></HBox>
                   <Label layoutX="232.0" layoutY="30.0" prefHeight="36.0" prefWidth="136.0" text="ADD STUDENT " textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
@@ -67,10 +91,6 @@
             <Button fx:id="clearAllField" layoutX="98.0" layoutY="542.0" mnemonicParsing="false" onAction="#HandleClearAllField" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef); -fx-background-radius: 7;" text="CLEAR" textFill="WHITE" />
             <Button fx:id="addStudentBtn" layoutX="374.0" layoutY="542.0" mnemonicParsing="false" onAction="#HandleAddStudent" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef); -fx-background-radius: 7;" text="ADD STUDENT" textFill="WHITE" />
             <Label fx:id="msgLabel" layoutX="97.0" layoutY="509.0" prefHeight="18.0" prefWidth="474.0" textFill="#b96909" />
-            <Button fx:id="backBtn" layoutX="21.0" layoutY="538.0" mnemonicParsing="false" onAction="#backto" prefHeight="38.0" prefWidth="58.0" style="-fx-background-color: transparent;">
-               <graphic>
-                  <FontAwesomeIconView fill="#030303" glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" text="" />
-               </graphic></Button>
          </children>
       </AnchorPane>
    </children>
