--- a/src/main/resources/fxml/ForgotPasswordPage.fxml
+++ b/src/main/resources/fxml/ForgotPasswordPage.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -16,6 +19,27 @@
     </VBox>
     <AnchorPane layoutX="210.0" prefHeight="567.0" prefWidth="490.0">
         <children>
+            <HBox layoutX="391.0" layoutY="-2.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+                <children>
+                    <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                        <graphic>
+                            <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="@../images/minimize_window.png" />
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                        <graphic>
+                            <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="@../images/close_window.png" />
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                </children></HBox>
             <Label layoutX="165.0" layoutY="39.0" prefHeight="32.0" prefWidth="178.0" text="Forgot Password">
                 <font>
                     <Font name="System Bold" size="22.0" />
