--- a/src/main/resources/fxml/IssueBookPage.fxml
+++ b/src/main/resources/fxml/IssueBookPage.fxml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="560.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.IssueBookPageController">
    <children>
+       <HBox layoutX="684.0" layoutY="-1.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+           <children>
+               <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/minimize_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+               <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/close_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+           </children></HBox>
       <AnchorPane prefHeight="560.0" prefWidth="394.0" style="-fx-background-color: #dce6e5;">
          <children>
             <TextField fx:id="bookIDField" layoutX="102.0" layoutY="110.0" prefHeight="25.0" prefWidth="205.0" promptText="Book ID" />
@@ -70,11 +93,6 @@
             <Label fx:id="msgLabel" layoutX="103.0" layoutY="437.0" prefHeight="18.0" prefWidth="276.0" textFill="#b96909" />
             <Button fx:id="searchBookBtn" layoutX="314.0" layoutY="30.0" mnemonicParsing="false" onAction="#HandleSearchBook" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #bfbfc7;" text="Search" />
             <Button fx:id="clearBookField" layoutX="16.0" layoutY="433.0" mnemonicParsing="false" onAction="#HandleClearAllBookField" prefHeight="25.0" prefWidth="70.0" style="-fx-background-color: #bfbfc7;" text="Clear" />
-            <Button fx:id="backBtn" layoutX="17.0" layoutY="494.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" text="Go Back">
-               <graphic>
-                  <FontAwesomeIconView glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" />
-               </graphic>
-            </Button>
          </children>
       </AnchorPane>
       <Label layoutX="417.0" layoutY="32.0" text="Enter ID :">
@@ -83,7 +101,7 @@
          </font>
       </Label>
       <TextField fx:id="searchStudentID" layoutX="499.0" layoutY="28.0" prefHeight="26.0" prefWidth="195.0" promptText="Enter student ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
-      <Button fx:id="searchStudentBtn" layoutX="711.0" layoutY="29.0" mnemonicParsing="false" onAction="#HandleSearchStudent" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #bfbfc7;" text="Search" />
+      <Button fx:id="searchStudentBtn" layoutX="713.0" layoutY="38.0" mnemonicParsing="false" onAction="#HandleSearchStudent" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #bfbfc7;" text="Search" />
       <TextField fx:id="studentIDField" layoutX="518.0" layoutY="110.0" prefHeight="25.0" prefWidth="216.0" promptText="Student ID" />
       <TextField fx:id="studentNameField" layoutX="518.0" layoutY="150.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Name" />
       <TextField fx:id="studentSchoolField" layoutX="518.0" layoutY="190.0" prefHeight="25.0" prefWidth="216.0" promptText="Student School" />
