--- a/src/main/resources/fxml/ReturnBookPage.fxml
+++ b/src/main/resources/fxml/ReturnBookPage.fxml
@@ -5,11 +5,35 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ReturnBookPageController">
     <children>
+        <HBox layoutX="684.0" layoutY="-1.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+            <children>
+                <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                    <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/minimize_window.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                    <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/close_window.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </children></HBox>
           <TextField fx:id="bookIDField" layoutX="116.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ID" />
           <TextField fx:id="bookISBNField" layoutX="116.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ISBN" />
           <TextField fx:id="bookTitleField" layoutX="116.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Title" />
