--- a/src/main/resources/fxml/ScanISBNPage.fxml
+++ b/src/main/resources/fxml/ScanISBNPage.fxml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
 <AnchorPane prefHeight="450.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ScanISBNPageController">
    <children>
+       <HBox layoutX="401.0" layoutY="-2.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+           <children>
+               <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/minimize_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+               <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                               <Image url="@../images/close_window.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+               </Button>
+           </children></HBox>
       <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="320.0" layoutX="90.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
