--- a/src/main/resources/fxml/StatisticsPage.fxml
+++ b/src/main/resources/fxml/StatisticsPage.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="392.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.StatisticsPageController">
+<AnchorPane id="AnchorPane" prefHeight="415.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.StatisticsPageController">
    <children>
-      <AnchorPane prefHeight="402.0" prefWidth="826.0" style="-fx-background-color: #dce6e5;">
+      <AnchorPane prefHeight="415.0" prefWidth="826.0" style="-fx-background-color: #dce6e5;">
          <children>
-            <TabPane fx:id="tabPane" layoutX="27.0" layoutY="29.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="362.0" prefWidth="758.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane fx:id="tabPane" layoutX="27.0" layoutY="38.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="362.0" prefWidth="758.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab fx:id="bookListPane" text="Book List">
                   <content>
@@ -231,6 +231,28 @@
                   <Insets />
                </opaqueInsets>
             </TabPane>
+             <HBox layoutX="726.0" layoutY="-1.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+                 <children>
+                     <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                         <graphic>
+                             <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                     <Image url="@../images/minimize_window.png" />
+                                 </image>
+                             </ImageView>
+                         </graphic>
+                     </Button>
+                     <Button fx:id="close" mnemonicParsing="false" onAction="#HandleClose" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
+                         <graphic>
+                             <ImageView fitHeight="20.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                     <Image url="@../images/close_window.png" />
+                                 </image>
+                             </ImageView>
+                         </graphic>
+                     </Button>
+                 </children>
+            </HBox>
          </children>
       </AnchorPane>
    </children>
