--- a/src/main/resources/fxml/ReturnBookPage.fxml
+++ b/src/main/resources/fxml/ReturnBookPage.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,9 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ReturnBookPageController">
+<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ReturnBookPageController">
     <children>
-        <HBox layoutX="684.0" layoutY="-1.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
+        <HBox layoutX="463.0" layoutY="-1.0" prefHeight="30.0" prefWidth="100.0" spacing="10.0">
             <children>
                 <Button fx:id="minimize" mnemonicParsing="false" onAction="#HandleMinimize" prefHeight="30.0" prefWidth="45.0" style="-fx-background-color: transparent;">
                     <graphic>
@@ -34,120 +33,61 @@
                     </graphic>
                 </Button>
             </children></HBox>
-          <TextField fx:id="bookIDField" layoutX="116.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ID" />
-          <TextField fx:id="bookISBNField" layoutX="116.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ISBN" />
-          <TextField fx:id="bookTitleField" layoutX="116.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Title" />
-          <TextField fx:id="bookAuthorField" layoutX="116.0" layoutY="213.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Author" />
-          <TextField fx:id="bookCategoryField" layoutX="116.0" layoutY="255.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Category" />
-          <TextField fx:id="bookPublisherField" layoutX="116.0" layoutY="297.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Publisher" />
-          <TextField fx:id="bookImagePathField" layoutX="116.0" layoutY="339.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ImagePath" />
-          <Label layoutX="30.0" layoutY="89.0" prefHeight="19.0" prefWidth="28.0" text="ID :">
+          <TextField fx:id="bookIDField" layoutX="245.0" layoutY="86.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ID" />
+          <TextField fx:id="bookISBNField" layoutX="245.0" layoutY="128.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ISBN" />
+          <TextField fx:id="bookTitleField" layoutX="245.0" layoutY="170.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Title" />
+          <Label layoutX="30.0" layoutY="89.0" prefHeight="19.0" prefWidth="62.0" text="Book ID :">
               <font>
                   <Font size="13.0" />
               </font>
           </Label>
-          <Label layoutX="30.0" layoutY="131.0" text="ISBN :">
+          <Label layoutX="30.0" layoutY="131.0" text="Book ISBN :">
               <font>
                   <Font size="13.0" />
               </font>
           </Label>
-          <Label layoutX="30.0" layoutY="173.0" text="Title :">
-              <font>
-                  <Font size="13.0" />
-              </font>
-          </Label>
-          <Label layoutX="30.0" layoutY="216.0" text="Author :">
-              <font>
-                  <Font size="13.0" />
-              </font>
-          </Label>
-          <Label layoutX="30.0" layoutY="258.0" text="Category :">
-              <font>
-                  <Font size="13.0" />
-              </font>
-          </Label>
-          <Label layoutX="30.0" layoutY="301.0" text="Publisher :">
-              <font>
-                  <Font size="13.0" />
-              </font>
-          </Label>
-          <Label layoutX="30.0" layoutY="341.0" text="ImagePath :">
+          <Label layoutX="30.0" layoutY="173.0" text="Book Title :">
               <font>
                   <Font size="13.0" />
               </font>
           </Label>
           <Label fx:id="msgLabel" layoutX="30.0" layoutY="397.0" prefHeight="18.0" prefWidth="297.0" textFill="#b96909" />
-          <Button fx:id="backBtn" layoutX="6.0" layoutY="462.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" text="Go Back">
-              <graphic>
-                  <FontAwesomeIconView glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" />
-              </graphic>
-          </Button>
-        <Label layoutX="179.0" layoutY="30.0" text="Enter Issue ID :">
+        <Label layoutX="34.0" layoutY="29.0" text="Enter Issue ID :">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="searchIssueIDField" layoutX="289.0" layoutY="26.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter Issue ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
-        <Button fx:id="searchIssueID" layoutX="518.0" layoutY="26.0" mnemonicParsing="false" onAction="#HandleSearchIssueID" prefHeight="26.0" prefWidth="62.0" style="-fx-background-color: #bfbfc7;" text="Search" />
-        <TextField fx:id="studentIDField" layoutX="518.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Student ID" />
-        <TextField fx:id="studentNameField" layoutX="518.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Name" />
-        <TextField fx:id="studentSchoolField" layoutX="518.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Student School" />
-        <TextField fx:id="studentEmailField" layoutX="518.0" layoutY="213.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Email" />
-        <TextField fx:id="studentPhoneNumberField" layoutX="518.0" layoutY="255.0" prefHeight="25.0" prefWidth="216.0" promptText="Student PhoneNumber" />
-        <TextField fx:id="studentAddressLineField" layoutX="518.0" layoutY="297.0" prefHeight="25.0" prefWidth="216.0" promptText="Student AddressLine" />
-        <DatePicker fx:id="studentBirthdayField" layoutX="518.0" layoutY="339.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Birthday" />
-        <DatePicker fx:id="issueDate" layoutX="518.0" layoutY="381.0" prefHeight="25.0" prefWidth="216.0" promptText="Date Issue" />
-        <Label layoutX="417.0" layoutY="90.0" text="ID ;">
+        <TextField fx:id="searchIssueIDField" layoutX="167.0" layoutY="22.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter Issue ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
+        <Button fx:id="searchIssueID" layoutX="392.0" layoutY="25.0" mnemonicParsing="false" onAction="#HandleSearchIssueID" prefHeight="26.0" prefWidth="62.0" style="-fx-background-color: #bfbfc7;" text="Search" />
+        <TextField fx:id="studentIDField" layoutX="245.0" layoutY="211.0" prefHeight="25.0" prefWidth="216.0" promptText="Student ID" />
+        <TextField fx:id="studentNameField" layoutX="247.0" layoutY="255.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Name" />
+        <DatePicker fx:id="issueDate" layoutX="247.0" layoutY="300.0" prefHeight="25.0" prefWidth="216.0" promptText="Date Issue" />
+        <Label layoutX="28.0" layoutY="214.0" text="Student ID :">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <Label layoutX="417.0" layoutY="130.0" text="Name ;">
+        <Label layoutX="28.0" layoutY="258.0" text="Student Name :">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <Label layoutX="417.0" layoutY="174.0" prefHeight="19.0" prefWidth="53.0" text="School :">
+        <Label layoutX="28.0" layoutY="303.0" text="Date Issue:">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <Label layoutX="417.0" layoutY="216.0" text="Email :">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Label>
-        <Label layoutX="417.0" layoutY="259.0" text="PhoneNumber :">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Label>
-        <Label layoutX="417.0" layoutY="301.0" text="AddressLine :">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Label>
-        <Label layoutX="417.0" layoutY="341.0" text="Birthday :">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Label>
-        <Label layoutX="417.0" layoutY="383.0" text="Date Issue:">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Label>
-      <Label layoutX="417.0" layoutY="426.0" text="Return Date :">
+      <Label layoutX="26.0" layoutY="348.0" text="Return Date :">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-        <Button fx:id="returnBookBtn" layoutX="314.0" layoutY="462.0" mnemonicParsing="false" onAction="#HandleReturnBook" prefHeight="29.0" prefWidth="155.0" style="-fx-background-color: #91460c; -fx-background-radius: 7;" text="ISSUE" textFill="WHITE">
+        <Button fx:id="returnBookBtn" layoutX="275.0" layoutY="455.0" mnemonicParsing="false" onAction="#HandleReturnBook" prefHeight="29.0" prefWidth="155.0" style="-fx-background-color: #91460c; -fx-background-radius: 7;" text="ISSUE" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="clearAllField" layoutX="598.0" layoutY="26.0" mnemonicParsing="false" onAction="#HandleClearAllField" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #bfbfc7;" text="Clear All Field" />
-      <DatePicker fx:id="returnDate" layoutX="518.0" layoutY="423.0" prefHeight="25.0" prefWidth="216.0" promptText="Return Date" />
+        <Button fx:id="clearAllField" layoutX="27.0" layoutY="457.0" mnemonicParsing="false" onAction="#HandleClearAllField" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #bfbfc7;" text="Clear All Field" />
+      <DatePicker fx:id="returnDate" layoutX="247.0" layoutY="345.0" prefHeight="25.0" prefWidth="216.0" promptText="Return Date" />
     </children>
 </AnchorPane>
